# cg

./: .gitignore  Cargo.toml  LICENSE  binding.gyp  grammar.js  package.json  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
