[package]
name = "tree-sitter-cg"
description = "cg grammar for tree-sitter"
version = "1.0.0"
authors = ["Steve Orens <steve@config.com>"]
license = "UNLICENSED"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/sorens/cg"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
